subprojects/swen430/src/test/resources/tests/valid/ListAssign_Valid_13.while
void main() {
    [[{int f}]] r = [[{f: 5}]];
    r[0][0].f = 1;
    print r;
}
