subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_17.while
int f({int f} r) {
    r.f = 1.0;
    return 0;
}